1.门铃详情页奔溃.2.分享给好友内容

--- a/app/src/main/res/values/oem_.xml
+++ b/app/src/main/res/values/oem_.xml
@@ -11,5 +11,5 @@
     <bool name="show_third_login">true</bool>
     <bool name="show_share_btn">true</bool>
     <string name="qrcode_prefix">http://a.app.qq.com/o/simple.jsp?pkgname=%1$s&amp;id=%2$s</string>
-    <string name="share_to_friends_link">http://a.app.qq.com/o/simple.jsp?pkgname=%s</string>
+    <string name="share_to_friends_link">http://www.jfgou.com/app/download.html?pkgname=%s</string>
 </resources>
