--- a/app/src/main/res/layout/fragment_mine_share_manager.xml
+++ b/app/src/main/res/layout/fragment_mine_share_manager.xml
@@ -49,7 +49,7 @@
             android:onClickListener="@{listener}"
             app:layout_constraintTop_toBottomOf="@id/sharedDevice"
             app:rightDrawable="@drawable/icon_list_next"
-            app:text="已分享内容"
+            app:text="@string/Tap3_ShareDevice_SharedContents"
             app:textColor="@color/color_333333"
             app:textSize="@dimen/sp16" />
     </android.support.constraint.ConstraintLayout>
