--- a/app/src/main/res/layout/layout_panorama_pop_menu.xml
+++ b/app/src/main/res/layout/layout_panorama_pop_menu.xml
@@ -6,6 +6,8 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:clickable="false"
+        android:focusable="false"
         android:paddingBottom="@dimen/y15"
         android:paddingEnd="@dimen/y15">
 
@@ -26,49 +28,46 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/act_panorama_camera_quick_menu_item1_mic" />
 
-        <View
-            android:id="@+id/speed_background"
-            android:layout_width="0dp"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="@dimen/y42"
             android:layout_marginTop="@dimen/y15"
             android:background="@drawable/panorama_camera_quick_menu_item3"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/act_panorama_camera_quick_menu_item2_voice" />
+            app:layout_constraintTop_toBottomOf="@id/act_panorama_camera_quick_menu_item2_voice">
 
-        <ImageView
-            android:id="@+id/act_panorama_camera_quick_menu_item3_left"
-            android:layout_width="@dimen/y24"
-            android:layout_height="@dimen/y24"
-            android:layout_marginStart="@dimen/y9"
-            android:src="@drawable/btn_leftkey_selector"
-            app:layout_constraintBottom_toBottomOf="@id/speed_background"
-            app:layout_constraintEnd_toStartOf="@+id/act_panorama_camera_quick_menu_item3_content"
-            app:layout_constraintStart_toStartOf="@id/speed_background"
-            app:layout_constraintTop_toTopOf="@+id/speed_background" />
+            <ImageView
+                android:id="@+id/act_panorama_camera_quick_menu_item3_left"
+                android:layout_width="@dimen/y24"
+                android:layout_height="@dimen/y24"
+                android:layout_centerVertical="true"
 
-        <TextView
-            android:id="@+id/act_panorama_camera_quick_menu_item3_content"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="速率:高清"
-            android:textColor="#FFFFFF"
-            android:textSize="@dimen/sp15"
-            app:layout_constraintBottom_toBottomOf="@id/speed_background"
-            app:layout_constraintEnd_toStartOf="@+id/act_panorama_camera_quick_menu_item3_right"
-            app:layout_constraintStart_toEndOf="@id/act_panorama_camera_quick_menu_item3_left"
-            app:layout_constraintTop_toTopOf="@id/speed_background" />
+                android:src="@drawable/btn_leftkey_selector" />
 
-        <ImageView
-            android:id="@+id/act_panorama_camera_quick_menu_item3_right"
-            android:layout_width="@dimen/y24"
-            android:layout_height="@dimen/y24"
-            android:layout_marginEnd="@dimen/y9"
-            android:src="@drawable/btn_rightkey_selector"
-            app:layout_constraintBottom_toBottomOf="@id/speed_background"
-            app:layout_constraintEnd_toEndOf="@id/speed_background"
-            app:layout_constraintStart_toEndOf="@id/act_panorama_camera_quick_menu_item3_content"
-            app:layout_constraintTop_toTopOf="@id/speed_background" />
+            <TextView
+                android:id="@+id/act_panorama_camera_quick_menu_item3_content"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_toEndOf="@id/act_panorama_camera_quick_menu_item3_left"
+                android:text="高清"
+                android:textColor="#FFFFFF"
+                android:textSize="@dimen/sp15" />
+
+            <ImageView
+                android:id="@+id/act_panorama_camera_quick_menu_item3_right"
+                android:layout_width="@dimen/y24"
+                android:layout_height="@dimen/y24"
+                android:layout_centerVertical="true"
+
+                android:layout_toEndOf="@id/act_panorama_camera_quick_menu_item3_content"
+                android:src="@drawable/btn_rightkey_selector"
+                android:visibility="invisible" />
+
+        </RelativeLayout>
+
 
     </android.support.constraint.ConstraintLayout>
 
