--- a/app/src/main/res/layout/activity_door_bell.xml
+++ b/app/src/main/res/layout/activity_door_bell.xml
@@ -49,7 +49,8 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_bell_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent" />
 
         <include
             android:id="@+id/fragment_bell_home_empty"
