--- a/app/src/main/res/layout/fragment_home_mine_share_content.xml
+++ b/app/src/main/res/layout/fragment_home_mine_share_content.xml
@@ -41,7 +41,7 @@
             app:ct_enable_theme="true"
             app:ct_fit_system_window="true"
             app:ct_icon="@drawable/nav_icon_back_white"
-            app:ct_left_title="已分享内容"
+            app:ct_left_title="@string/Tap3_ShareDevice_SharedContents"
             app:ct_left_title_color="@color/color_white"
             app:ct_right_title_color="@color/color_white"
             app:rightAction="@{rightAction}"
